[tool.poetry]
name = "ephem-vpn-api"
version = "0.1.0"
description = "Python API for managing OpenVPN clients"
authors = ["DevOps Engineer <devops@example.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
boto3 = "^1.28.0"
python-multipart = "^0.0.6"
cryptography = "^41.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
